syntax = "proto3";

option csharp_namespace = "GRPC.Server.Protos";

service SumService{
	rpc Sum(SumRequest) returns (SumResponce);
}

message SumRequest{
	int32 num1 = 1;
	int32 num2 = 2;
}

message SumResponce{
	int64 result =1;
}
